--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <title>Minecraft Clicker</title>
   <link rel="stylesheet" href="./res/css/style.css">
   <link rel="shortcut icon" href="/res/img/cookie.png" type="image/x-icon">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 
 <body>
