updated and responsived

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <h1>Minecraft Clicker</h1>
+  <h1 id="headline">Minecraft Clicker</h1>
   <div class="box"><img src="./res/img/cookie.png" alt="cookie" id="cookie">
   <div id="box-show">If you want to change pickaxe don't click on upgrades.</div>
   </div>
@@ -31,6 +31,7 @@
     allowfullscreen>…</iframe>
   <div id="aboutmusic">If you want the music to play don't reload the page.</div>
   <button id="changeBackground">Click for colorful background</button>
+  <button id="setBackground">Click for default background</button>
   <script src="./res/js/main.js"></script>
 </body>
 
