--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Minecraft Clicker</title>
   <link rel="stylesheet" href="./res/css/style.css">
-  <link rel="shortcut icon" href="/res/img/cookie.png" type="image/x-icon">
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./res/img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
