updated and little fix

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <img src="./res/img/stone.png" alt="cookie" id="cookie2">
   <img src="./res/img/iron.png" alt="cookie" id="cookie3">
   <img src="./res/img/dia.png" alt="cookie" id="cookie4">
-  <p id="counter">Cookies: 0</p>
+  <p id="counter">Stones: 0</p>
   <button id="time">TIME</button>
   <br>
   <button id="cookieClickMultiplier">Buy upgrade: 50</button>
