--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <p id="counter">Stones: 0</p>
   <button id="time">TIME</button>
   <br>
-  <button id="cookieClickMultiplier">Buy upgrade: 50</button>
+  <button id="cookieClickMultiplier">Buy an upgrade: 50</button>
   <button id="autoClickerButton">Buy Auto Clicker: 100</button>
   <p id="info"></p>
   <iframe style="display: none;" width="560" height="315" src="https://www.youtube.com/embed/74m2BFKamls?autoplay=1"
