--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="shortcut icon" href="./res/img/favicon.ico" type="image/x-icon">
 </head>
 
-<body style="background-image: url(./res/img/background.jpg)">
+<body>
   <h1 id="headline">Minecraft Clicker</h1>
   <div class="box"><img src="./res/img/cookie.png" alt="cookie" id="cookie">
   <div id="box-show">If you want to change pickaxe don't click on upgrades.</div>
